cambio a mano dev1

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -42,7 +42,7 @@
         <tbody>
             <tr>
                 <td>01</td>
-                <td>victor</td>
+                <td>Milenko</td>
                 <td>baez</td>
                 <td>vctrmlk@gmail.com</td>
                 <td>Hombre</td>
