--- a/estadisticas.html
+++ b/estadisticas.html
@@ -27,7 +27,7 @@
   </header>
   <main>
     <section class="tituloTabla">
-        <h1>Nomina de equipo TI:</h1>
+        <h1>Nomina de personas TI:</h1>
     </section>
     <table id="myTable" class="table table-striped">
         <thead>
