primer commit gaby

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -116,6 +116,13 @@
                 <td>chollingdale1c@sciencedirect.com</td>
                 <td>Female</td>
             </tr>
+            <tr>
+                <td>12</td>
+                <td>Gabriela</td>
+                <td>Dominguez</td>
+                <td>gabrieladominguez.0997@gmail.com</td>
+                <td>Female</td>
+            </tr>
         </tbody>
     </table>
 
