--- a/estadisticas.html
+++ b/estadisticas.html
@@ -43,7 +43,7 @@
             <tr>
                 <td>01</td>
                 <td>Milenko</td>
-                <td>baez</td>
+                <td>baez narvaez</td>
                 <td>vctrmlk@gmail.com</td>
                 <td>Hombre</td>
             </tr>
