--- a/estadisticas.html
+++ b/estadisticas.html
@@ -130,6 +130,13 @@
                 <td>gabrieladominguez.0997@gmail.com</td>
                 <td>Female</td>
             </tr>
+            <tr>
+                <td>14</td>
+                <td>Gabriela</td>
+                <td>Dominguez</td>
+                <td>gabrieladominguez.0997@gmail.com</td>
+                <td>Female</td>
+            </tr>
         </tbody>
     </table>
 
