Cambio email y nombre

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -55,9 +55,9 @@
                 <td>Mujer</td>
             </tr>
                 <td>03</td>
-                <td>Willy</td>
-                <td>McCoole</td>
-                <td>wmccoole2@bloglovin.com</td>
+                <td>Ale</td>
+                <td>Encina</td>
+                <td>l.encinavilches@gmail.com</td>
                 <td>Hombre</td>
             </tr>
             <tr>
